Add some useful apis
